--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "budget-management-tool",
+  "name": "enterprise-finance-manager",
   "private": true,
   "version": "0.0.0",
   "type": "module",
